--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
   </head>
   <body>
-    
+    <script src="./test/root.js"></script>
+    <script src="./test/index-test.js"></script>
   </body>
 </html>
